# lynx-investor-financials

./: CHANGELOG.md  DEVELOPMENT.md  README.md  lynx-investor-financials.py  pyproject.toml
.github/: PUBLISHING.md
docs/: API.md
lynx_finance/: __init__.py  __main__.py  cli.py  display.py  easter.py  interactive.py  models.py  plugin.py
lynx_finance/core/: analyzer.py  conclusion.py  fetcher.py  news.py  reports.py
lynx_finance/export/: __init__.py  html_export.py  pdf_export.py  txt_export.py
lynx_finance/gui/: app.py
lynx_finance/metrics/: calculator.py  explanations.py  relevance.py  sector_insights.py
lynx_finance/tui/: app.py  themes.py
robot/: api_tests.robot  cli_tests.robot  export_tests.robot
tests/: test_calculator.py  test_conclusion.py  test_edge_cases.py  test_explanations.py  test_export.py  test_models.py  test_relevance.py  test_sector_validation.py  test_storage.py
